[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
once_cell = "1.4.0"
async-session = "3.0.0"
async-redis-session = "0.2.2"

[dependencies.diesel]
version = "1.4.8"
features = ["mysql"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "secrets"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_mysql_pool"]

[dependencies.rocket_okapi]
version = "0.8.0-rc.1"
features = ["swagger", "rapidoc"]
